<resources>
    <string name="app_name">MyLibrary</string>

    <string name="landing_heading1">Welcome to MyLibrary!</string>
    <string name="landing_heading2">Tell us a bit about yourself</string>
    <string name="landing_roles_group_label">I am a</string>
    <string name="landing_continue">Continue</string>

    <string name="role_reader">Reader</string>
    <string name="role_librarian">Librarian</string>
    <string name="role_archivist">Archivist</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="hello_user_role">Hello, %s!</string>
    <string name="not_a_user_role">Not a %s?</string>
    <string name="not_an_user_role">Not an %s?</string>

    <string name="name">Name</string>
    <string name="input_name_hint">Enter your name</string>
    <string name="surname">Surname</string>
    <string name="input_surname_hint">Enter your surname</string>
    <string name="phone_number">Phone number</string>
    <string name="input_number_hint">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="input_password_hint">Enter your password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="input_password_repeat_hint">Repeat your password</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_nave_an_account">Already nave an account?</string>

    <string name="orders">Orders</string>
    <string name="library">Library</string>

    <string name="username">%s</string>
    <string name="exit">Exit</string>

    <string name="actual_switch">Actual</string>
    <string name="reserved_switch">Reserved</string>

    <string name="return_date">Return date:</string>
    <string name="issue_date">Issue date:</string>

    <string name="cancel_reservation">Cancel</string>

    <string name="prev_btn">Prev</string>
    <string name="next_btn">Next</string>

    <string name="book_icon_content">book</string>
    <string name="total_copies_title">Total copies:</string>
    <string name="item_state">State:</string>
    <string name="order_date">Order date:</string>

    <string name="item_info">Info</string>

    <string name="actual_switch_text">Actual</string>
    <string name="reserved_switch_text">Reserved</string>

    <string name="btn_take">Take</string>
    <string name="btn_order">Order</string>

    <string name="book_tooltip">Book</string>
    <string name="collection_tooltip">Collection</string>

    <string name="some_error_message">An error occurred</string>
    <string name="auth_fail_message">Authorization failed</string>
    <string name="internal_error_message">Internal server error occurred</string>
    <string name="entity_not_found_message">%s was not found in database</string>
    <string name="password_invalid_message">Provided password is invalid</string>
    <string name="sign_out_error_message">Couldn\'t sign you out</string>
    <string name="bad_request_message">Bad request</string>
    <string name="already_exists_message">%s with this %s already exists</string>
    <string name="server_unavailable_message">Server currently unavailable, try again later</string>
    <string name="time_out_message">The request timed out, try again later, please</string>

    <string name="blank_text_validation_error">%s can\'t be blank</string>
    <string name="too_long_validation_error">%s is too long</string>
    <string name="too_short_validation_error">%s is too short</string>
    <string name="password_confirmation_validation_error">%s doesn\'t match the Password</string>
    <string name="return_string">Return</string>
    <string name="withdrawal_string">Withdrawal</string>
    <string name="search">Search</string>
    <string name="isbn">ISBN:</string>
    <string name="copy_id">Copy ID:</string>
    <string name="expected_return_date">Expected return date:</string>
    <string name="withdraw">Withdraw</string>
    <string name="user_id">User ID:</string>

    <string name="pagination">Page %d of %d</string>
    <string name="reader_header">%s %s</string>

    <string name="order_cancel_success">Your order was successfully canceled</string>
    <string name="order_success">Your order was successful! You can see it on the Orders page</string>
    <string name="copy_withdraw_success">Copy was successfully withdrawn</string>
    <string name="copy_return_success">Copy was successfully returned</string>

</resources>
