<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fillViewport="false"
        android:scrollY="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/reg_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="20"
                    android:hint="@string/input_name_hint"
                    android:inputType="text"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/surname"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_surname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/reg_input_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_surname_hint"
                    android:maxLength="20"
                    android:inputType="text"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/reg_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_number_hint"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/reg_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_password_hint"
                    android:maxLength="30"
                    android:inputType="textPassword"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/repeat_password"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_password_repeat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/reg_input_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_password_repeat_hint"
                    android:maxLength="30"
                    android:inputType="textPassword"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorSuccess"
                android:onClick="onSignUp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/to_sign_in_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/to_sign_in_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:onClick="onToSignIn"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_for_sign_in" />

                <TextView
                    android:id="@+id/label_for_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/already_nave_an_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/to_sign_in_btn"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
