<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:text="Book"
        android:textSize="18sp"
        android:textStyle="bold" />

        <ImageView
            android:id="@+id/book_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/book_icon_content"
            app:srcCompat="@drawable/ic_bookmark_black_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/copies_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="12dp"
            android:text="@string/total_copies_title"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView_copies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="12dp"
            android:text="2"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/copies_layout">

        <TextView
            android:id="@+id/state_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/item_state"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/state_caption"
            android:gravity="center_vertical"
            android:text="free"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/button"
            android:contentDescription="@string/item_info"
            android:gravity="center_vertical"
            app:srcCompat="@drawable/ic_info_outline_black_24dp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:text="@string/cancel_reservation" />

    </RelativeLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/reservationDate_layout"
        android:background="@color/darkerGrey"
        android:visibility="visible" />
</RelativeLayout>