<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibrarianMainActivity">

    <LinearLayout
        android:id="@+id/reader_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="12dp"
            android:text="@string/user_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="12dp"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reader_list_layout"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:text="@string/return_string"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:onClick="OnReturnClick"/>

        <Button
            android:id="@+id/withdraw_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="125dp"
            android:background="@color/colorSuccess"
            android:gravity="center_vertical"
            android:onClick="OnWithdrawClick"
            android:text="@string/withdrawal_string"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>